bug:74376 - on mobile client can't read html emails as their view is truncated -Added a css class to ensure that the word wrap happens if needed. -Also, made the change to reflect css changes after a sync in dev made.
http://bugzilla.zimbra.com/show_bug.cgi?id=74376

Copied from Perforce
 Change: 372707

--- a/WebRoot/css/iphone.css
+++ b/WebRoot/css/iphone.css
@@ -642,7 +642,9 @@ h1, h2, h3, h4, h5, h6 {
 .msg-list-in-conv .cell {
     padding: 2px !important;
 }
-
+.msgwrap {
+    word-wrap: break-word;
+}
 /* TODO: Do we still need these classes?
 .SmlIcnHldr,.Edit {
     width: 16px;
